--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ a {
 }
 
 .bg-header img{
-    max-height: 80px;
+    max-height: 70px;
     padding: 10px 0px;
     float: left;
 }
@@ -114,7 +114,7 @@ nav ul li a:hover{
     position: absolute;
     width: 30%;
     left: 15%;
-    bottom: 30%;
+    bottom: 20%;
 }
 
 .text-banner h3{
@@ -452,4 +452,149 @@ nav ul li a:hover{
 .review img{
     border-radius: 100%;
     width: 50%;
+}
+
+/* Tambahan */
+.slide-menu {
+    position: fixed;
+    /* right: 0; */
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #666;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 0;
+    transition: .5s;
+}
+
+.slide-menu ul {
+    list-style: none;
+}
+
+.slide-menu .search {
+    margin: 0;
+    margin-top: 20px;
+}
+
+.slide-menu .tambahan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide-menu .search input {
+    width: 150px;
+}
+
+.slide-menu ul li a {
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    padding: 30px 0;
+}
+
+.close-menu {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 30px;
+    color: #ffffff;
+    padding: 10px 20px;
+}
+
+.menu-phone li {
+    outline: none;
+    color: #333;
+    font-size: 30px;
+    padding: 10px 10px;
+    display: inline-block;
+    margin-top: 15px;
+    transition: .5s;
+}
+
+@media(max-width: 1200px){
+    .text-banner p {
+        display: none;
+    }
+}
+
+@media(max-width: 768px){
+    .img-desktop {
+        display: none;
+    }
+
+    .img-phone {
+        display: block;
+    }
+
+    .text-banner {
+        display: none;
+    }
+
+    .carousel-cell {
+        width: 50%;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .menu-phone {
+        display: block;
+    }
+
+    nav ul li a{
+        outline: none;
+        color: #333;
+        font-size: 30px;
+        padding: 10px 10px;
+        display: inline-block;
+        margin-top: 15px;
+        transition: .5s;
+    }
+
+    /* .slide-menu {
+        display: ;
+    } */
+}
+
+@media(min-width: 769px){
+    .img-desktop {
+        display: block;
+    }
+
+    .img-phone {
+        display: none;
+    }
+
+    .text-banner {
+        display: block;
+    }
+
+    .carousel-cell {
+        width: 16.66%;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .menu-phone {
+        display: none;
+    }
+
+    nav ul li a{
+        outline: none;
+        color: #333;
+        font-size: 30px;
+        padding: 10px 30px;
+        display: inline-block;
+        margin-top: 15px;
+        transition: .5s;
+    }
 }
